Fixed z-index issue with header. Fixed search container with location search

--- a/frontend/src/Header.css
+++ b/frontend/src/Header.css
@@ -6,6 +6,7 @@
 }
 
 .headerContainer {
+    z-index: 10;
     display: flex;
     position:fixed;
     justify-content: center;
