--- a/frontend/src/pages/css/Home.css
+++ b/frontend/src/pages/css/Home.css
@@ -23,28 +23,33 @@
 
 .Home .homeContainer .searchForCarContainer {
     display: flex;
+    flex-direction: row;
     gap: 5px;
-    justify-content: center;
+    justify-content:end;
     height: fit-content;
     margin-top: 10px;
+    max-height: 90px;
     width: 1250px;
 }
 
 .Home .homeContainer .searchDateContainer {
     font-size: 14px;
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
     grid-template-columns: 1fr 1fr;
-    align-items:end;
+    justify-content:end;
 }
 
 .Home .homeContainer .locationDiv {
-    height: 75px;
     display: flex;
-    align-items:end;
+    flex-direction: column;
+    justify-content:end;
+    height: 100%;
 }
 
 .Home .homeContainer .searchForCarContainer input[type="text"] {
-    font-size: 50px;
+    font-size: 30px;
     width: 370px;
     height:50px;
     border: 1px solid #D9D9D9;
@@ -59,8 +64,9 @@
 }
 
 .Home .homeContainer .searchForCarContainer .searchButton {
-    padding: 10px 15px 10px 15px;
-    margin-top: 20px;
+    padding: 15px 15px;
+    margin-top: auto;
+    height: 25px;
     background-color: #2c81c8;
     color: white;
     display: flex;
@@ -79,18 +85,17 @@
 }
 
 .Home .homeContainer .searchContentContainer {
-    position: fixed;
+    position:absolute;
     background-color: white;
     border: 1px solid darkgray;
     border-radius: 10px;
     justify-content: center;
-    width: 256px;
-    margin-top: 10px;
+    width: 370px;
     overflow-y: scroll;
     min-height: fit-content;
     max-height: 200px;
     height: 200px;
-    z-index: 1;
+    z-index: 0;
 }
 
 .Home .homeContainer .searchContentContainer .searchContentHomeUl {
